app/argocd/blog/rollout.yaml
# @see https://fidelissauro.dev/argo-rollouts-qual-a-forma-mais-simples-de-executar-canary-releases-e-blue-green-deployments-no/
# kubectl argo rollouts get rollout blog-rollout
# kubectl argo rollouts promote blog-rollout
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blog-rollout
  labels:
    app: blog # Só é executado depois que o PreSync termina!
spec:
  strategy:
    blueGreen:
      activeService: blog-active
      previewService: blog-preview
      previewReplicaCount: 2
      scaleDownDelayRevisionLimit: 1
      autoPromotionEnabled: true
      # Só começa a rodar depois que o novo ReplicaSet (preview) está pronto e os
      # manifests foram aplicados com sucesso, mas antes de fazer a promoção pra produção.
      prePromotionAnalysis:
        templates:
          - templateName: preview-health-check
        args:
          - name: preview-url
            value: https://preview.alysonsilva.dev
      postPromotionAnalysis:
        templates:
          - templateName: sync-worker-rollout
  replicas: 5
  revisionHistoryLimit: 2
  minReadySeconds: 30
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: vultr-cr-credentials
      volumes:
        - name: app-blog-shared
          persistentVolumeClaim:
            claimName: app-blog-pvc
      containers:
        - name: app-blog
          image: blog-image
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 128Mi
          #   limits:
          #     cpu: 1
          #     memory: 256Mi
          volumeMounts:
            - name: app-blog-shared
              mountPath: /var/www/app
              # readOnly: true
              # # NEW
              # # Possible values are `Enabled`, `IfPossible`, and `Disabled`.
              # # Needs to be specified in conjunction with `readOnly: true`.
              # recursiveReadOnly: Enabled
