app/argocd/blog/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-active
  labels:
    app: blog
spec:
  selector:
    app: blog
  ports:
    - name: entrypoint
      port: 8000
      targetPort: 8000
      protocol: TCP
