app/argocd/blog/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog-active
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      # match: HostRegexp(`$APP_DOMAIN`, `{subdomain:[a-z0-9]+}.$APP_DOMAIN`)
      match: Host(`${ARGOCD_ENV_DOMAIN}`)
      priority: 10
      services:
        - name: blog-active
          port: entrypoint
          passHostHeader: true
      middlewares:
        - name: security
          namespace: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog-preview
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`preview.${ARGOCD_ENV_DOMAIN}`)
      priority: 20
      services:
        - name: blog-preview
          port: entrypoint
          passHostHeader: true
      middlewares:
        - name: security
          namespace: default
